--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,12 @@
 	    <artifactId>extentreports</artifactId>
 	    <version>2.41.2</version>
 	</dependency>
+	<!-- https://mvnrepository.com/artifact/org.apache.poi/poi -->
+	<dependency>
+	    <groupId>org.apache.poi</groupId>
+	    <artifactId>poi</artifactId>
+	    <version>3.17-beta1</version>
+	</dependency>
 
 	
 		
